# LexerGenerator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  lexergenerator  main.cpp  runTest.sh
includes/: automaton.hpp  dfa.hpp  dfatransition.hpp  nfa.hpp  nfagraph.hpp  nfatree.hpp  simpleDFA.hpp  transitions.hpp
includes/LexerGenerator/: dfa.hpp  nfa.hpp
source/: automaton.cpp  dfa.cpp  dfatransition.cpp  nfa.cpp  nfagraph.cpp  nfatree.cpp  simpleDFA.cpp  transitions.cpp
test/: graphTest.cpp  ioDFATest.cpp  simpleDFATest.cpp  testAutomaton.txt  testautomaton.hpp  transitionsTest.cpp  treeTest.cpp
testres/: testAutomaton.txt
